syntax = "proto3";
option csharp_namespace = "UserService.API";
import "Common.proto";
package userservice.api;

service UserService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc SignOut (SignOutRequest) returns (SignOutResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse);
}

message LoginRequest {
  string user_name = 1;
  string password = 2;
}

message LoginResponse {
  common.ResponseStatus status = 1;
  string token = 2;
}

message RegisterRequest {
  string user_name = 1;
  string password = 2;
  string e_mail = 3;
  string phone = 4;
}

message RegisterResponse {
  common.ResponseStatus status = 1;
}

message SignOutRequest {

}

message SignOutResponse {
  common.ResponseStatus status = 1;
}


message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  common.ResponseStatus status = 1;
  bool valid = 2;
}

message GetUserInfoRequest {
  string token = 1;
  string user_name = 2;
}

message GetUserInfoResponse {
  common.ResponseStatus status = 1;
  string user_name = 2;
  string e_mail = 3;
  string phone = 4;
}